--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -21,3 +21,16 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.todos {
+  border: solid;
+ 
+}
+
+.todo-card {
+  border: solid;
+  background-color: grey;
+  float: left;
+  width: 200px;
+  margin: 40px;
+}
